class AppStrings {
  static const appName = "BharathFix";

  static const loginTitle = "Enter your phone number";

  static const loginSubtitle =
      "We'll send you a text with a verification code. Standard tariff may apply.";

  static const continueText = "Continue";

  static const skip = "Skip";

  static const otpTitle = "Enter verification code";

  static const otp = "OTP";

  static const resend = "Resend Code";

  static const support = "Support";
}